product_docs/docs/net_connector/7.0.4.1/03_the_advanced_server_net_connector_overview.mdx
---
title: "The EDB .NET Connector overview"

---

<div id="the_advanced_server_net_connector_overview" class="registered_link"></div>

The EDB .NET Connector is a .NET data provider that allows a client application to connect to a database stored on an EDB Postgres Advanced Server host. The .NET Connector accesses the data directly, allowing the client application optimal performance, a broad spectrum of functionality, and access to EDB Postgres Advanced Server features.

The .NET Connector supports the following frameworks:

-   .NET 7.0
-   .NET 6.0
-   .NET 5.0
-   .NET Core 3.1
-   .NET Standard 2.0 and 2.1


## The .NET class hierarchy

The .NET class hierarchy contains classes that you can use to create objects that control a connection to the EDB Postgres Advanced Server database and manipulate the data stored on the server. The following are a few of the most commonly used object classes.

`EDBDataSource`

The `EDBDataSource` is the entry point for all the connections made to the database. It is responsible for issuing connections to the server and efficiently managing them. Starting with EDB .NET Connector 7.0.4.1, you no longer need direct instantiation of `EDBConnection`. Instantiate `EDBDataSource` and use the method provided to create commands or execute queries.

`EDBConnection`

 The `EDBConnection` class represents a connection to EDB Postgres Advanced Server. An `EDBConnection` object contains a `ConnectionString` that instructs the .NET client how to connect to an EDB Postgres Advanced Server database. `EDBConnection` should be obtained from an `EDBDataSource` instance and used directly only in specific scenarios such as transactions.

`EDBCommand`

 An `EDBCommand` object contains an SQL command that the client executes against EDB Postgres Advanced Server. Before you can execute an `EDBCommand` object, you must link it to an `EDBConnection` object.

`EDBDataReader`

 An `EDBDataReader` object provides a way to read an EDB Postgres Advanced Server result set. You can use an `EDBDataReader` object to step through one row at a time, forward only.

`EDBDataAdapter`

 An `EDBDataAdapter` object links a result set to the EDB Postgres Advanced Server database. You can modify values and use the `EDBDataAdapter` class to update the data stored in an EDB Postgres Advanced Server database.
